<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherInfoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_get_weather">Get Weather</string>
    <string name="cityName">Please enter a city</string>
    <string name="weatherIconName">Weather Icon</string>
    <string name="sunrise">Sunrise: </string>
    <string name="sunset">Sunset: </string>
    <string name="temperature">Temperature: </string>
    <string name="humidity">Humidity: </string>

</resources>
